--- a/app/views/pages/intro.html.haml
+++ b/app/views/pages/intro.html.haml
@@ -1,5 +1,6 @@
 %div.intcontainer
   :css
+    #landingbox{ margin-top: 90px; background: transparent; background-color: none; border: 0; }
     h3 { display: inline; margin-bottom: 2px; }
     p { font-size: 15px; }
     strong { color: #404040; }
