--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -61,7 +61,7 @@
 .inlinedisplay li { display:inline; }
 .bar2 .mosaic-overlay { bottom:-20px; height:40px; background-color: rgba(0, 0, 0, .8); -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)"; filter:alpha(opacity=80); }
 .bar2 .mosaic-overlay:hover { background-color: rgba(0,0,0,1); -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)"; filter:alpha(opacity=100); text-decoration: none; }
-.mosaic-block {display:inline-block;  position:relative;overflow:hidden;width:200px;height:80px;margin-right:10px; background:#111 url(../img/progress.gif) no-repeat center center; box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 5px;}
+.mosaic-block {display:inline-block;  position:relative;overflow:hidden;width:200px;height:80px;margin-right:10px; box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 5px;}
 .mosaic-backdrop {display:none;position:absolute;top:0;height:100%;width:100%;background:#111; box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 5px;}
 .mosaic-overlay {display:none;z-index:5;position:absolute;width:100%; height:100%; background:#111;}
 .details h4{margin: 9px 10px 10px 10px;font: 300 12px 'Helvetica Neue', Helvetica, Arial, sans-serif;line-height: 10%;letter-spacing: 0.15em; color: rgba(255, 255, 255, .9);text-shadow: 1px 1px 0 black;}
