Admin and persona editing.

--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -7,7 +7,7 @@ $(function(){
   );
 });
 </script>
-<section id="company-profile">
+<div class="single_pane" id="company-profile">
   <%= render "companies/tab_header", { :company => @company, :mode => "users" } %>
   <section id="users">
     <a href="#adding_users" class="btn primary" style="float:right;">Add Users</a>
