--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,7 +15,7 @@
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
         })();
   %body
-    = render "layouts/navbar"
+    = render "layouts/navbar", { no_bar: false }
     = render "layouts/explore_modal" if current_user
     %div.container.body{ style: "padding-top: 51px;" }
       - flash.each do |key, value|
