--- a/app/views/personas/index.html.haml
+++ b/app/views/personas/index.html.haml
@@ -18,4 +18,4 @@
           %td
             %p= link_to "delete", p, :method => :delete, :confirm => "Are you certain you want to delete this persona?"
       
-  = link_to "New Persona", new_persona_path, :class => "btn primary"
+  = link_to "New Persona", new_persona_path, :class => "button button-info"
