--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -49,7 +49,7 @@
             - if @user.title
               %li Title: #{@user.title}
       %div.leftbox
-        %div.leftboxheader My badges
+        %div.leftboxheader My Challenges
         %div.leftboxfooter
           %li.leftrailcontent
             - @enrolled_paths.each do |c|
