--- a/app/views/personas/_preview.html.haml
+++ b/app/views/personas/_preview.html.haml
@@ -15,5 +15,8 @@
     %div.exploretextdetails{ style: "min-height: 95px;" }
       %h2= persona.name
       %p= persona.description
-    = link_to persona_path(persona), class: "show_persona_select", remote: true do
-      %button.button.button-actionable{ style: "float: right;" } Choose
+    - if persona.path_personas.empty?
+      %button.button.button-actionable{ style: "float: right; opacity: 0.5" } Choose
+    - else
+      = link_to persona_path(persona), class: "show_persona_select", remote: true do
+        %button.button.button-actionable{ style: "float: right;" } Choose
