--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -7,6 +7,6 @@
   $(function(){
     $('.bar2').mosaic({ animation: 'slide' });
     $('.explore_link').click(function(){
-      $("#explore_modal").modal({ show: true, backdrop: true});
+      $("#explore_modal").modal({ keyboard: true, show: true, backdrop: true});
     })
   });
