--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,5 +1,4 @@
 !!!
-/xmlns:fb="http://www.facebook.com/2008/fbml"
 %html
   %head
     = render "layouts/head"
@@ -21,5 +20,7 @@
       - flash.each do |key, value|
         = content_tag(:div, value, :class => "alert-message #{key}")
       = yield
+      <script type="text/javascript" src="http://s7.addthis.com/js/300/addthis_widget.js#pubid=ra-508487fa4f941f4a"></script>
+        
     - unless params[:controller] == "sections"
       = render "layouts/footer"
