--- a/app/views/shared/_newsfeed.html.haml
+++ b/app/views/shared/_newsfeed.html.haml
@@ -1,5 +1,5 @@
 :javascript
-  $(function(){ $(".youtube_viewer").each(function(){ set_youtube_preview($(this).attr("alt"), $(this).attr("id")); }); });
+  $(function(){ $(".youtube_answer").each(function(){ set_youtube_preview($(this).attr("alt"), $(this).attr("id")); }); });
 - if newsfeed_items.empty?
   %div.post{ style: "height: 300px;"}
     %p There are no responses yet.
@@ -9,18 +9,22 @@
       = link_to (image_tag r.user.profile_pic, class: "photo"), r.user
     %div.postspace
       %div.postheader
-        %h3
-          = link_to r.user.to_s, r.user, class:"username"
+        %h3{ style: "width: 175px;" }
+          = link_to truncate(r.user.to_s, length: 50), r.user, class:"username"
         %div.votingandpointsarea
+          - if @sharing
+            = render "shared/sharing"
           = link_to vote_task_path(r.task.id, sa_id: r.submitted_answer.id), remote: true, class: ("btn vote_button " + (@votes.include?(r.submitted_answer.id) ? "primary" : "")) do
             %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/purple+upvote+arrow.png" }
             %div.vote_count= r.submitted_answer.total_votes.to_i
       %div.posttext.leveltext= r.task.question
-      %div.CRarea
-        - if r.task.answer_sub_type == Task::TEXT
-          %blockquote{ style: "margin:20px;" }= r.submitted_answer.content
-        - elsif r.task.answer_sub_type == Task::IMAGE
-          = link_to image_tag(sanitize(r.submitted_answer.content)), sanitize(r.submitted_answer.content), :target => "_blank"
-        - elsif r.task.answer_sub_type == Task::YOUTUBE
-          %div.youtube_answer{ id: "youtube_answer_#{r.id}", alt: r.submitted_answer.content }
+      = link_to cp_details_path(r.path, r.id), style: "text-transform: none; color: inherit;" do
+        %div.CRarea
+          - if r.task.answer_sub_type == Task::TEXT
+            %blockquote{ style: "margin:20px;" }= r.submitted_answer.content
+          - elsif r.task.answer_sub_type == Task::IMAGE
+            = image_tag(sanitize(r.submitted_answer.content))
+          - elsif r.task.answer_sub_type == Task::YOUTUBE
+            %center
+              %div.youtube_answer{ id: "youtube_answer_#{r.id}", alt: r.submitted_answer.content }
       = render "comments/comments", { owner: r.submitted_answer, owner_type: "SubmittedAnswer", owner_id: r.submitted_answer_id, comment_count: r.submitted_answer.comments.size, created_at: r.created_at}
