--- a/app/views/shared/_sharing.html.haml
+++ b/app/views/shared/_sharing.html.haml
@@ -1,4 +1,4 @@
-%div.addthis_toolbox{ "addthis:url" => "#{request.url}", "addthis:title" => "Horrray!", "addthis:description" => "Fuck yessssss" }
+%div.addthis_toolbox.social_toolbar{ "addthis:url" => "#{request.url}", "addthis:title" => "Horrray!", "addthis:description" => "Fuck yessssss" }
   %a.addthis_button_facebook= image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/icon+Facebook+small.png"
   %a.addthis_button_twitter= image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/icon+twitter+small.png"
   %a.addthis_button_google_plusone_share= image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/icon+Google%2B+small.png"
