--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -2,6 +2,9 @@
 = csrf_meta_tag
 = javascript_include_tag "application"
 = stylesheet_link_tag "application"
+%meta{ property: "og:title", content: "#{social_title}" } 
+%meta{ property: "og:description", content: "#{social_description}" } 
+%meta{ property: "og:image", content: "#{social_image}" } 
 
 :javascript
   $(function(){
