--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -22,9 +22,13 @@
             %li.navitem
               = link_to create_path do
                 = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/create.png", style: "width:22px;"
-        %ul.nav.pull-right{ style: "float:right; margin-right: 197px;" }
+      %ul.nav.pull-right{ style: "float:right; margin-right: 197px;" }
+        - if current_user
           - if @enable_administration
             %li
               = link_to "Admin", admin_path
           %li
             = link_to "Sign out", signout_path
+        - else
+          %li
+            = link_to "Sign In", root_url
