--- a/app/views/paths/show.html.haml
+++ b/app/views/paths/show.html.haml
@@ -5,10 +5,12 @@
         = image_tag @path.path_pic, class: "bigheaderimage"
       %div.rightofbigheaderimage{ style: "width:80%;" }
         %div#topboxcontent
-          %div.button.button-actionable{ style: "float: right;"} Continue Level #{@enrollment.level}
+          - if current_user
+            %div.button.button-actionable{ style: "float: right;"} Continue Level #{@enrollment.level}
           %div.span5{ style: "width: 550px;" }
             %h1= @path.name
-            %h3 Level #{@enrollment.level}, #{@enrollment.total_points} points
+            - if current_user
+              %h3 Level #{@enrollment.level}, #{@enrollment.total_points} points
         %div.challengecarousel
           %ul.inlinedisplay
             - @enrolled_users.each do |u|
@@ -49,48 +51,49 @@
                     %li{ style: "padding: 5px;" }= link_to truncate(task.question, length: 80), task_details_path(@path, task.id), style: "font-size: 14px; text-decoration: none; color: #0064CD"
         = render "shared/newsfeed", { newsfeed_items: @responses }
 
-%div#launchpad.modal.hide.fade{ style: "left: 36%; top: 30%;"}
-  %div.overlay
-    %div.launchpad
-      %div.modal_close
-        %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/close_icon.png"}
-      %h1
-        = image_tag(@path.path_pic)
-        %div #{@path.name} 
-        %div{ style: "font: normal 18px 'MuliItalic', sans-serif;" } - #{@total_points_earned} pts, Level #{current_user.level(@path)}
-      %div.launchpadcontent
-        %div.launchpadsectioncolumn
-          %div.launchpadcolumnheader
-            Sections
-          %ul.sectionlist
-            - @path.sections.each do |s|
-              %li.launchpad_link
-                - if s.points_until_unlock(@enrollment) <= 0
-                  %div{ style: "display:inline-block; width:75%;" }
-                    = link_to launchpad_section_path(s), remote: true do
-                      %span.pointer_caret= "»" if s == @current_section
-                      %span= truncate(s.name, length: 25)
-                  %div.pointsandprogress
-                    %div #{s.points_earned(current_user)} points
-                    %div #{s.percentage_complete(current_user)}%
-                - else
-                  %div{ style: "line-height: 16px;" }= truncate(s.name, length: 25)
-                  %p{ style: "font-size: 9px; line-height: 12px;" } #{s.points_until_unlock(@enrollment)} points to unlock
-        = render "sections/launchpad"
-
-:javascript
-  $(function(){
-    $(".button-actionable").click(function(){
-      $('#launchpad').modal({ keyboard: true, backdrop: 'static', show: true });
-    });
-     
-    $(".launchpad_link").on("ajax:success", function(xhr, data, etc){
-      $("span.pointer_caret").remove();
-      $(".sectioninfocontainer").replaceWith(data);
-      $(this).find("a").prepend("<span class='pointer_caret'>» </span>");
-    });
-  });
-
-- if @display_launchpad
+- if current_user
+  %div#launchpad.modal.hide.fade{ style: "left: 36%; top: 30%;"}
+    %div.overlay
+      %div.launchpad
+        %div.modal_close
+          %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/close_icon.png"}
+        %h1
+          = image_tag(@path.path_pic)
+          %div #{@path.name} 
+          %div{ style: "font: normal 18px 'MuliItalic', sans-serif;" } - #{@total_points_earned} pts, Level #{current_user.level(@path)}
+        %div.launchpadcontent
+          %div.launchpadsectioncolumn
+            %div.launchpadcolumnheader
+              Sections
+            %ul.sectionlist
+              - @path.sections.each do |s|
+                %li.launchpad_link
+                  - if s.points_until_unlock(@enrollment) <= 0
+                    %div{ style: "display:inline-block; width:75%;" }
+                      = link_to launchpad_section_path(s), remote: true do
+                        %span.pointer_caret= "»" if s == @current_section
+                        %span= truncate(s.name, length: 25)
+                    %div.pointsandprogress
+                      %div #{s.points_earned(current_user)} points
+                      %div #{s.percentage_complete(current_user)}%
+                  - else
+                    %div{ style: "line-height: 16px;" }= truncate(s.name, length: 25)
+                    %p{ style: "font-size: 9px; line-height: 12px;" } #{s.points_until_unlock(@enrollment)} points to unlock
+          = render "sections/launchpad"
+  
   :javascript
-    $(function(){ $('#launchpad').modal({ keyboard: true, backdrop: 'static', show: true }); });
+    $(function(){
+      $(".button-actionable").click(function(){
+        $('#launchpad').modal({ keyboard: true, backdrop: 'static', show: true });
+      });
+       
+      $(".launchpad_link").on("ajax:success", function(xhr, data, etc){
+        $("span.pointer_caret").remove();
+        $(".sectioninfocontainer").replaceWith(data);
+        $(this).find("a").prepend("<span class='pointer_caret'>» </span>");
+      });
+    });
+  
+  - if @display_launchpad
+    :javascript
+      $(function(){ $('#launchpad').modal({ keyboard: true, backdrop: 'static', show: true }); });
