--- a/app/views/mailer/comment_alert.html.haml
+++ b/app/views/mailer/comment_alert.html.haml
@@ -11,11 +11,15 @@
             %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/MB+logo+200+wide.png", :style => "width:145px"}/
       %tr
         %td{:style => "font-family:'lucida grande',tahoma,verdana,arial,sans-serif; color: #404040; padding:6px 12px 12px 12px; border-bottom:1px solid rgba(0, 0, 0, .1);"}
-          %span{:style => "font-size:26px;"} Someone has commented on your response to a Challenge Question!
-          %br/
-          %hr{:style => "border:1px solid rgba(0, 0, 0, .1); border-bottom:none;"}
-            %p{:style => "font-size:12px;"} #{@commenting_user} just posted a comment on your response to the following Challenge Question:
-            %p{:style => "font-size:12px; font-style:italic;"} #{@commented_question}
-              
-            %p{:style => "font-size:12px;"} If you have any questions about MetaBright, you can reach out to our support team at <a href="[email]">support@metabright.com</a>
-      %tr
+          %p{:style => "font-size:12px;"} 
+            %a{:href => "#{@commenting_user_profile}"}#{@commenting_user}
+            just commented on 
+            %a{:href => "#{@users_response}"}your response 
+            to the following Challenge Question:
+          %p{:style => "font-size:10px; font-style:italic;"} #{@commented_question}
+          %p{:style => "font-size:12px;"} To see the comment thread, follow the link below:
+            %a{:href => "#{@users_response}"}#{@users_response}
+          %p{:style => "font-size:12px;"} 
+            Thanks,
+            %br/
+            The MetaBright Team
