Launchpad/Explore bug fix.

--- a/app/views/paths/show.html.haml
+++ b/app/views/paths/show.html.haml
@@ -83,7 +83,7 @@
   
   :javascript
     $(function(){
-      $(".button-actionable").click(function(){
+      $("#topboxcontent .button-actionable").click(function(){
         $('#launchpad').modal({ keyboard: true, backdrop: 'static', show: true });
       });
        
