sharing icon and random stuff

--- a/app/views/comments/_comments.html.haml
+++ b/app/views/comments/_comments.html.haml
@@ -3,6 +3,8 @@
     $(function(){ $(".comment_delete").on("ajax:success", function(){ $(this).parents("li").slideUp(); }); });
   %div.leftstuff
     %a.comment{ onclick: "$(this).hide().parent().parent().find('.comments').slideDown();" } #{owner.comments.size.to_i} Comments
+    %span
+      %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/share_icon_gray.png", :style => "cursor:pointer; position:relative; top:4px; left:5px; width:19px;"}
   %div.posttimestamp
     - if created_at
       - if created_at.today?
