cleaning up image display in questions and adding custom mosiacs to home page.

--- a/app/views/sections/_continue.html.haml
+++ b/app/views/sections/_continue.html.haml
@@ -54,7 +54,7 @@
       %div{ style: "display:inline-block;" }
         %span <strong>#{@section.path.name}:</strong> #{@section.name}</span>
         %div#idprogressbar
-    %div{ style: "margin: auto;" }
+    %div{ style: "text-align:center;" }
       = render "stored_resource", { :stored_resource => @stored_resource }
     %div.questionandresponsespace{ style: "width: 425px;" }
       %div.questionspace
