--- a/app/views/users/home.html.haml
+++ b/app/views/users/home.html.haml
@@ -5,22 +5,9 @@
     %div#carouselupdatespace
       %ul.inlinedisplay
         - @enrollments.each do |e|
-          %li
-            %div.mosaic-block.bar2
-              = link_to path_path(e.path), class: "mosaic-overlay" do
-                %div.details
-                  %h4{ style: "margin-bottom: 0px;" }= e.path.name
-                  %h5{ style: "margin-left: 10px; color: white; font-size: 12px;" } Level #{e.level}, #{e.total_points} points
-              %div
-                %img.mosaic-backdrop{ src: e.path.path_pic }
-        - if @enrollments.size < 3
-          %li
-            %div.mosaic-block.bar2
-              %a.explore_link.mosaic-overlay{ style: "cursor: pointer;" }
-                %div.details
-                  %h4 Find new challenges...
-              %div
-                %img.mosaic-backdrop{ src: "http://placekitten.com/200/300" }
+          = render "shared/mosaic", { pic: e.path.path_pic, link: path_path(e.path), title: e.path.name, subtitle: "Level #{e.level}, #{e.total_points} points" }
+        - if @enrollments.size < 4
+          = render "shared/mosaic", { custom_class: "explore_link", link: "#", title: "The world awaits...", subtitle: "Explore new challenges!", pic: "https://s3.amazonaws.com/moonlite-nsdub/static/carousel_images/stoney_image_carousel.png" }
                 
   %div.row
     %div.span5
