--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,13 +1,13 @@
 %div.footer
   %span.copyright © 2012 MetaBright, Inc. /
   %span.footerlinks
-    %a About 
+    = link_to "About", about_path 
     \/
     %a Blog
     \/
     %a Feedback
     \/
-    %a Terms of Service
+    = link_to "Terms of Service", tos_path 
     
 :javascript
   var uvOptions = {};
