--- a/app/views/shared/_newsfeed.html.haml
+++ b/app/views/shared/_newsfeed.html.haml
@@ -1,6 +1,6 @@
 :javascript
   $(function(){ 
-    $(".youtube_answer").each(function(){ set_youtube_preview($(this).attr("alt"), $(this).attr("id")); });
+    $(".youtube_answer").each(function(){ set_large_youtube_preview($(this).attr("alt"), $(this).attr("id")); });
     $(".display_sharing_icon").click(function(){ 
       $(this).parents(".leftstuff").find(".social_toolbar").css("display", "inline");
       $(this).parent().remove(); 
