edits edits everywhere we're gonna get wet

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,13 +1,13 @@
 %div.footer
   %span.copyright © 2012 MetaBright, Inc. /
   %span.footerlinks
-    %a About 
+    %a{:href => "#"} About
     \/
-    %a Blog
+    %a{:href => "http://metabright.blogspot.com/"} Blog
     \/
-    %a Feedback
+    %a{:href => "https://metabright.uservoice.com/", :target => "_blank"} Feedback
     \/
-    %a Terms of Service
+    %a{:href => "#"} Terms of Service
     
 :javascript
   var uvOptions = {};
