--- a/app/views/pages/intro.html.haml
+++ b/app/views/pages/intro.html.haml
@@ -16,15 +16,15 @@
           %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Random+numbers/round_1_purple.png" }
           %h3.inttitle Choose a Persona
           %p.intdetails
-            The world of Metabright is filled with Personas. Personas represent <strong>who you are</strong> or who you <strong>want to be</strong>. New personas will be unlocked every week.
+            The world of MetaBright is organized according to Personas. Personas represent <strong>who you are</strong> or <strong>who you want to be</strong>.
         %li
           %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Random+numbers/round_2_purple.png" }
           %h3.inttitle Prove yourself
           %p.intdetails 
-            Personas are made up of <strong>challenges, skills and adventures</strong>. As you progress through each, you will also improve your Persona.
+            Personas are made up of <strong>Challenges</strong> - areas of knowledge, skill, and adventure. Your progress in Challenges corresponds to advancement in your Persona.
         %li
           %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Random+numbers/round_3_purple.png" }
           %h3.inttitle Grow
-          %p.intdetails 
-            There is no end to the world of Metabright. Aquire new Personas, compete with and help others progress, or build your even own Personas and challenges for others to take. <strong>Be who you want to be.</strong>
+          %p.intdetails
+            Get better at your Challenges and build your Persona. Dominate the leaderboard while helping others improve. Create your own Challenges and become a master of MetaBright. <strong>Be who you want to be.</strong>
     = link_to "Let's go!", start_path, style: "float: right; margin: 0 10px 10px 0;", class: "button button-actionable"
