--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -242,3 +242,13 @@ h1, h2, h3, h4, h5, h6, p, div, span, a { font-family: 'MuliRegular' }
 .copyright{}
 .footerlinks{}
 .footerlinks a{text-decoration: none; color:#707070}
+
+/* About */
+.aboutcontainer{overflow:hidden; width:695px;margin-left:auto;margin-right:auto;border-radius:6px;border: 1px solid rgba(0, 0, 0, .1);background: rgba(255, 255, 255, .8); }
+.aboutbox{background-color:white; margin:12px; border-radius:10px;border:1px solid rgba(0, 0, 0, .1);overflow:hidden; padding:20px 20px 5px 20px;}
+.aboutheader span{font-size:50px; position:relative; bottom:42px;}
+.aboutheader img{height:115px;}
+.aboutheader{margin: -4% -2.8% -2.8%;}
+.aboutbody{overflow: hidden; padding-top:1%;}
+.aboutbody p{font-size:14px; line-height:20px;}
+.aboutbody span{font-size:11px; line-height:18px;}
