bug fixes from walkthru

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -3,7 +3,7 @@
   %span.footerlinks
     = link_to "About", about_path 
     \/
-    %a{:href => "http://metabright.blogspot.com/"} Blog
+    %a{href: "http://metabright.blogspot.com/", target: "_blank"} Blog
     \/
     %a{:href => "https://metabright.uservoice.com/", :target => "_blank"} Feedback
     \/
