--- a/app/views/shared/_mosaic.html.haml
+++ b/app/views/shared/_mosaic.html.haml
@@ -3,7 +3,7 @@
   %div.mosaic-block.bar2
     = link_to link, class: "mosaic-overlay #{custom_class}" do
       %div.details
-        %h4{ style: "margin-bottom: 0px;" }= title
-        %h5{ style: "margin-left: 10px; color: white; font-size: 12px;" }= subtitle
+        %h4= title
+        %h5= subtitle
     %div
       %img.mosaic-backdrop{ src: pic }
