--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -65,6 +65,7 @@
 .mosaic-backdrop {display:none;position:absolute;top:0;height:100%;width:100%;background:#111; box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 5px;}
 .mosaic-overlay {display:none;z-index:5;position:absolute;width:100%; height:100%; background:#111;}
 .details h4{margin: 9px 10px 10px 10px;font: 300 12px 'Helvetica Neue', Helvetica, Arial, sans-serif;line-height: 10%;letter-spacing: 0.15em; color: rgba(255, 255, 255, .9);text-shadow: 1px 1px 0 black;}
+.details h5{margin: 9px 12px; font: 300 11px 'Lucida Grande', Tahoma, Verdana, sans-serif; color: #AAA;}
 .mosaic-overlay:hover .details>h4{color:white;}
 .leftbox{text-shadow: 0 1px 0 white;border: 1px solid rgba(0, 0, 0, .1); font-size:12px;position: relative; margin-bottom: 10px;line-height: 16px; border-radius: 6px; display:block;}
 .leftboxfooter{  background-color:whitesmoke; border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; padding: 10px 12px;}
@@ -150,7 +151,8 @@
 .exploretiles{margin-bottom:15px; }
 .singleexploretile{display:inline-block; padding:17px 27px 0 21px;}
 .singleexploretile a{margin:2px; text-decoration:none;}
-.singleexploretile a:hover img, .singleexploretile .active img{border:2px solid #3399FF; margin:-2px}
+.singleexploretile a:hover img{border:2px solid #33FFEF; margin:-2px}
+.singleexploretile .active img{border:2px solid #3399FF; margin:-2px}
 .exploretileimage img{border-radius:4px; width:85px;}
 
 .exploretiledetailsarea       { border: 1px solid rgba(0, 0, 0, .1); border-radius:10px; padding:10px; background-color:whitesmoke; margin:0 21px 11px 21px;}
