Fixing about page css and staging variables.

--- a/app/views/pages/intro.html.haml
+++ b/app/views/pages/intro.html.haml
@@ -5,9 +5,7 @@
   p { font-size: 15px; }
   strong { color: #404040; }
 :javascript
-  $(function(){
-    $(".intcontainer").fadeIn(1000);
-  });
+  $(function(){ $(".intcontainer").fadeIn(1000); });
 
 %div.intcontainer
   %div.firstchallengeint
