--- a/app/views/pages/tos.html.haml
+++ b/app/views/pages/tos.html.haml
@@ -4,7 +4,7 @@
       %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/stoney+100x150.png"}
         %span Terms of Service
       %hr{:style => "margin:0"}
-    .aboutbody
+    .aboutbody{ style: "min-height: 333px;" }
       %h4 The Rules
       %p aklsdjf aksdfj aklsdjf lkas djflkasd jfalksdf jkalsd f
       
