--- a/app/views/layouts/landing.html.haml
+++ b/app/views/layouts/landing.html.haml
@@ -6,6 +6,7 @@
     #landingbox { height: 335px; width: 695px; margin-left: auto; margin-right: auto; margin-top: 90px; background-color: whiteSmoke;border-radius: 6px;border: 1px solid rgba(0, 0, 0, .1);background: rgba(255, 255, 255, 0.8); }
     .explorenewusercontent{ box-shadow: none; }
 %body
-  = render "layouts/navbar", { no_bar: true }
+  = render "layouts/navbar", { no_bar: (@no_bar.nil? ? true : @no_bar) }
   %div#landingbox
     = yield
+  = render "layouts/footer" if @show_footer
