--- a/app/views/shared/_newsfeed.html.haml
+++ b/app/views/shared/_newsfeed.html.haml
@@ -26,7 +26,7 @@
       = link_to cp_details_path(r.path, r.id), style: "text-transform: none; color: inherit;" do
         %div.CRarea
           - if r.task.answer_sub_type == Task::TEXT
-            %blockquote{ style: "margin:20px;" }= r.submitted_answer.content
+            %pre{ style: "margin:20px;" }= r.submitted_answer.content
           - elsif r.task.answer_sub_type == Task::IMAGE
             = image_tag(sanitize(r.submitted_answer.content))
           - elsif r.task.answer_sub_type == Task::YOUTUBE
